Issue #381: Combine web admin into a single .war file  - fix problems with art upload on Windows